static/themes/dark/theme.css
/* ... */
.u-form label input[type='text'],
.u-form label input[type='password'],
.u-form label input[type='email'],
.u-form textarea {
    color: #000;
    background: #fff;
    border: 1px solid #42b992;
}

/* buttons */
.u-button {
    color: #2c3e50;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
}

.u-link {
    color: #42b992;
}

.u-button-primary {
    background-color: #42b992;
    border: none;
    border-bottom: 1px solid #42b992;
    color: #dedede;
}

.u-button-secondary {
    background: rgba(117, 117, 117, 0.07);
    border-bottom: 1px solid rgba(117, 117, 117, 0.2);
}

.u-button-warning {
    background-color: #d16c6c;
    border-bottom: 1px solid #5f1515;
    color: #fff;
}

/* Application settings ( AppSettings.vue ) */
.kiwi-appsettings-block {
    background-color: #272626;
    border: 1px solid rgba(0, 0, 0, 0.2);
}

.kiwi-appsettings-block h3 {
    background: #42b992;
    color: #fff;
}

.kiwi-appsettings .u-form label span {
    color: #fff;
}

.kiwi-appsettings-title {
    background-color: #42b992;
    color: #fff;
}

.kiwi-appsettings-title:hover {
    background: #d16c6c;
}

/* AutoComplete - Shows when typging with a command (AutoComplete.vue) */
.kiwi-autocomplete {
    box-shadow: 0 1px 15px rgba(64, 54, 63, 0.25);
    border: 1px solid #ccc;
    background: #201f1f;
    color: #fff;
}

.kiwi-autocomplete-item {
    border-bottom: 1px solid #666;
}

.kiwi-autocomplete-item--selected {
    background: #515151;
}

/* Channel Banlist ( Channelbanlist.vue ) */
.kiwi-channelbanlist-table tr {
    border-bottom: 1px solid #ddd;
}

/* Channel List ( ChannelList.vue ) */
.kiwi-channellist table tbody tr:nth-child(even) {
    background-color: #262626;
}

.kiwi-channellist table tbody tr {
    border-top: 1px solid lightgray;
}

.kiwi-channellist-users {
    background: #42b992;
}

/* Container - Main ( Container.vue ) */
.kiwi-container {
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.kiwi-header-join-channel-button {
    background-color: #42b983;
    color: #dedede;
}

.kiwi-container-toggledraw-statebrowser {
    background: #1e1e1e;
    border-right: 1px solid #ddd;
}

.kiwi-container-toggledraw-sidebar {
    border-left: 1px solid #ddd;
}

.kiwi-container-toggledraw-sidebar--disabled {
    color: #b8babd;
}

.kiwi-container-toggledraw-statebrowser-messagecount {
    background-color: #42b983;
    color: #fff;
}

.kiwi-container-toggledraw-statebrowser-messagecount::after {
    border: 0.6em solid transparent;
    border-right-color: #ddd;
}

/* Sidebar uservue colouring */
.kiwi-userbox,
.kiwi-userbox-usermask {
    color: #dedede;
}

.kiwi-userbox .kiwi-userbox-actions {
    color: #fff;
    border-color: #fff;
}

.kiwi-userbox .kiwi-userbox-actions .u-button {
    border-color: #dedede;
    color: #dedede;
    transition: all 0.3s;
}

.kiwi-userbox .kiwi-userbox-actions .u-button:hover {
    color: #dedede;
}

.u-form.kiwi-ignore-user-form {
    color: #dedede;
}

/* Container Header ( ContainerHeader.vue ) */
.kiwi-header {
    background: #1e1e1e;
    color: #dedede;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.kiwi-header-topic {
    border-top: 1px solid #42b992;
    border-bottom: 1px solid #42b992;
    color: #dedede;
}

.kiwi-header-buffersettings {
    border-top: 1px solid #ddd;
}

.kiwi-header-topic > div {
    color: #dedede;
}

.kiwi-header-name {
    color: #dedede;
}

.kiwi-header-option {
    border-left: 1px solid rgba(255, 255, 255, 0.2);
}

.kiwi-header-option a:hover,
.kiwi-header-option--active a {
    background-color: #42b992;
    color: #dedede;
    opacity: 1;
}

.kiwi-statebrowser-network .kiwi-statebrowser-network-header a.kiwi-statebrowser-network-toggle:hover {
    background-color: #d16c6c;
    border-top-color: #d16c6c;
}

.kiwi-header-option-leave a:hover,
.kiwi-header-option-unpinsidebar:hover {
    background-color: #d16c6c;
    color: #dedede;
}

.kiwi-statebrowser-channel-settings,
.kiwi-statebrowser-channel-leave {
    background-color: #22231f;
}

.kiwi-statebrowser-channel-settings:hover {
    background-color: #42b992;
}

.kiwi-header .kiwi-header-notjoined .u-link {
    background-color: #42b992;
    color: #dedede;
}

.kiwi-header .kiwi-header-notjoined .u-link:hover {
    background-color: #5ec9a6;
}

/* The not joined button */
.kiwi-header .kiwi-header-notjoined .u-link {
    background-color: #42b992;
    color: #dedede;
}

.kiwi-header .kiwi-header-notjoined .u-link:hover {
    background-color: #5ec9a6;
}

.kiwi-header-name {
    color: #dedede;
}

.kiwi-header-server-connection .u-button {
    background: #42b992;
    color: #dedede;
}

/* Control Input - displayed at bottom of Kiwi ( ControlInput.vue ) */
.kiwi-controlinput {
    background: #151515;
    color: #dedede !important;
}

.kiwi-controlinput .kiwi-controlinput-user,
.kiwi-controlinput-inner .kiwi-controlinput-user {
    border-right: 1px solid rgba(255, 255, 255, 0.2);
}


.kiwi-controlinput-active-tool {
    background: #f6f6f6;
}

.kiwi-messagelist {
    background: #fff;
}

.kiwi-messagelist-seperator > span {
    backround: #363636;
    color: #fff;
    border: #fff;
}

.kiwi-messagelist-message--info-open {
    background: #f6f6f6;
}

.kiwi-messageinfo-urls {
    border-top: 1px solid #ddd;
}

.kiwi-messagelist-message.kiwi-messagelist-message--unread {
    border-left-color: rgba(255, 255, 255, 0.1);
    background-color: rgba(255, 255, 255, 0.1);
    opacity: 1;
}

.kiwi-messagelist-message.kiwi-messagelist-message--unread.kiwi-messagelist-message--unread {
    border-left: 2px solid #42b992;
}

.kiwi-messagelist-message.kiwi-messagelist-message--unread.kiwi-messagelist-message-connection {
    border-left: none;
    background: none;
}

/* Message list - Standard messages ( MessageList.vue ) */
.kiwi-messagelist {
    background: transparent;
}

.kiwi-messagelist-seperator {
    color: #000;
}

.kiwi-messagelist-message-action .kiwi-messagelist-body {
    color: #44f944;
    font-style: italic;
}
/* ... */

